--- a/loginpage.html
+++ b/loginpage.html
@@ -5,12 +5,17 @@
         <meta name="author" content="Group 4: Broo0488, [add your FANS]">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel = "stylesheet" href = "style.css">
+        <script src = "script.js"></script>
     </head>
     <body class="loginbody">
         <section class="login">
             <h1>Login</h1>
             <input type="text" placeholder="Username">
-            <input type="text" placeholder="Password">
+            <input type="password" placeholder="Password" id = "password">
+            <div class="show-password">
+                <input type="checkbox" id = "showPasswordCheckbox" onclick="ShowPassword()">
+                <label for="showPasswordCheckbox">Show Password</label>
+            </div>
             <button class="SubmitLogin">Submit</button>
         </section>
     </body>
